Style: Improve destop view of resturant detail pages Flexbox use to wrap resturant and review container Font of headers improved Make sure that paragraph length of review comments is optimum for reading

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@ nav h1 a span {
 
 .breadcrumb {
   box-sizing: border-box;
-  padding: 10px 40px 16px;
+  padding: 10px 0 10px 40px;
   background-color: #eee;
   margin: 0;
 }
@@ -92,6 +92,7 @@ nav h1 a span {
 /* Display list items side by side */
 .breadcrumb li {
     display: inline;
+    font-size: 16px;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
@@ -105,7 +106,6 @@ nav h1 a span {
 .breadcrumb li a {
     color: #0275d8;
     text-decoration: none;
-    font-size: 1em;
 }
 
 /* Add a color on mouse-over */
@@ -237,7 +237,7 @@ nav h1 a span {
   background-color: #f3f3f3;
   overflow-y: scroll;
   -webkit-overflow-scrolling:touch;
-  max-height: 82vh;
+  max-height: 84vh;
 }
 
 .app-wrap header {
@@ -253,21 +253,27 @@ nav h1 a span {
   background-color: #ccc;
 }
 
+.restaurantnreview{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+}
+
 .reviews-container,
 .restaurant-container {
-  box-sizing: border-box;
-  padding: 0 10px 0 10px;
-  max-width: 576px;
-  margin: auto;
+    max-width: 576px;
 }
 
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
   text-transform: uppercase;
+  font-weight: 550;
+  font-size: 1.4em;
 }
 
-#restaurant-img1 {
+#restaurant-img-frame {
   margin: 0 0 0 0;
 }
 
@@ -280,6 +286,7 @@ nav h1 a span {
   background-color: #333;
   color: #ddd;
   text-align: center;
+  letter-spacing: 8px;
 }
 
 .reviews-container h2 {
@@ -447,7 +454,7 @@ nav h1 a span {
   }
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1024px) {
   .breadcrumb {
     width: 50vw;
   }
@@ -460,18 +467,13 @@ nav h1 a span {
     position: fixed;
   }
   
-  .reviews-container,
-  .restaurant-container {
-    max-width: 50vw;
+  .restaurantnreview {
+    width: 50vw;
     margin-left:0;
     margin-top:0;
   }
 
   .app-wrap #footer {
-    width: 50%;
-  }
-
-  #restaurant-img1 {
-    width: 450px;
+    width: 50vw;
   }
 }
